--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run first CI step
-        run: echo "CI pipeline started"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
 
-      - name: Run second step
-        run: echo "Build completed successfully"
+      - name: Install dependencies
+        run: |
+          pip install -r app/requirements.txt
+
+      - name: Run app test
+        run: |
+          python -c "from app.app import hello; assert hello() == 'CI/CD Pipeline Working!'"
 
